# BreakOut

./: CMakeLists.txt  README.md
header/: InitObjects.h  initObjects.h  main.h
header/Game/: ball.h  block.h  player.h
header/InitRender/: application.h  draw.h
src/: main.c
src/InitRender/: InitObjects.c  application.c  draw.c  initObjects.c
src/game/: ball.c  block.c  player.c
